ver 0.15.17 (2011/??/??)
* encoder:
  - vorbis: reset the Ogg stream after flush
* decoders:
  - vorbis: fix tremor support


ver 0.15.16 (2011/03/13)
* output:
  - ao: initialize the ao_sample_format struct
  - jack: fix crash with mono playback
* encoders:
  - lame: explicitly configure the output sample rate
* update: log all file permission problems


ver 0.15.15 (2010/11/08)
* input:
  - rewind: fix assertion failure
* output:
  - shout: artist comes first in stream title


ver 0.15.14 (2010/11/06)
* player_thread: fix assertion failure due to wrong music pipe on seek
* output_thread: fix assertion failure due to race condition in OPEN
* input:
  - rewind: fix double free bug
* decoders:
  - mp4ff, ffmpeg: add extension ".m4b" (audio book)


ver 0.15.13 (2010/10/10)
* output_thread: fix race condition after CANCEL command
* output:
  - httpd: fix random data in stream title
  - httpd: MIME type audio/ogg for Ogg Vorbis
* input:
  - rewind: update MIME not only once
  - rewind: enable for MMS


ver 0.15.12 (2010/07/20)
* input:
  - curl: remove assertion after curl_multi_fdset()
* tags:
  - rva2: set "gain", not "peak"
* decoders:
  - wildmidi: support version 0.2.3


ver 0.15.11 (2010/06/14)
* tags:
  - ape: support album artist
* decoders:
  - mp4ff: support tags "album artist", "albumartist", "band"
  - mikmod: fix memory leak
  - vorbis: handle uri==NULL
  - ffmpeg: fix memory leak
  - ffmpeg: free AVFormatContext on error
  - ffmpeg: read more metadata
  - ffmpeg: fix libavformat 0.6 by using av_open_input_stream()
* playlist: emit IDLE_OPTIONS when resetting single mode
* listen: make get_remote_uid() work on BSD


ver 0.15.10 (2010/05/30)
* input:
  - mms: fix memory leak in error handler
  - mms: initialize the "eof" attribute
* decoders:
  - mad: properly calculate ID3 size without libid3tag


ver 0.15.9 (2010/03/21)
* decoders:
  - mad: fix crash when seeking at end of song
  - mpcdec: fix negative shift on fixed-point samples